[gd_scene load_steps=4 format=3 uid="uid://0v0k7k52ylo5"]

[ext_resource type="Texture2D" uid="uid://clt5kga2rg7yq" path="res://Assets/UITest/MenuBackground.png" id="1_xs4vs"]
[ext_resource type="Script" path="res://Scenes/Scripts/color_menu.gd" id="2_2lbc4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6euqn"]

[node name="TestUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackgroundColor" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.205117, 0.205117, 0.205117, 1)

[node name="ColorMenu" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -97.5
offset_top = -132.5
offset_right = 97.5
offset_bottom = 132.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_xs4vs")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3
script = ExtResource("2_2lbc4")

[node name="VBoxContainer" type="VBoxContainer" parent="ColorMenu"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -63.0
offset_top = -115.095
offset_right = 63.0
offset_bottom = -14.095
grow_horizontal = 2
grow_vertical = 0

[node name="CheckButton1" type="CheckButton" parent="ColorMenu/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_6euqn")
text = "COLOR #1"

[node name="CheckButton2" type="CheckButton" parent="ColorMenu/VBoxContainer"]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_6euqn")
text = "COLOR #2"

[node name="CheckButton3" type="CheckButton" parent="ColorMenu/VBoxContainer"]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_6euqn")
text = "COLOR #3"

[node name="GridContainer" type="GridContainer" parent="ColorMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -66.0
offset_top = 10.0
offset_right = 66.0
offset_bottom = 142.0
grow_horizontal = 2
theme_override_constants/h_separation = 45
theme_override_constants/v_separation = 45
columns = 3

[node name="Panel1" type="Panel" parent="ColorMenu/GridContainer"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="ColorMenu/GridContainer/Panel1"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.29, 0.301834, 1, 1)

[node name="Panel2" type="Panel" parent="ColorMenu/GridContainer"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="ColorMenu/GridContainer/Panel2"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.29, 0.301834, 1, 1)

[node name="Panel3" type="Panel" parent="ColorMenu/GridContainer"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="ColorMenu/GridContainer/Panel3"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.29, 0.301834, 1, 1)

[node name="Panel4" type="Panel" parent="ColorMenu/GridContainer"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="ColorMenu/GridContainer/Panel4"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.49, 0.4985, 1, 1)

[node name="Panel5" type="Panel" parent="ColorMenu/GridContainer"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="ColorMenu/GridContainer/Panel5"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.49, 0.4985, 1, 1)

[node name="Panel6" type="Panel" parent="ColorMenu/GridContainer"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="ColorMenu/GridContainer/Panel6"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.49, 0.4985, 1, 1)

[node name="Panel7" type="Panel" parent="ColorMenu/GridContainer"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="ColorMenu/GridContainer/Panel7"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.65, 0.655833, 1, 1)

[node name="Panel8" type="Panel" parent="ColorMenu/GridContainer"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="ColorMenu/GridContainer/Panel8"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.65, 0.655833, 1, 1)

[node name="Panel9" type="Panel" parent="ColorMenu/GridContainer"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="ColorMenu/GridContainer/Panel9"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.65, 0.655833, 1, 1)

[connection signal="pressed" from="ColorMenu/VBoxContainer/CheckButton1" to="ColorMenu" method="_on_check_button_1_pressed"]
[connection signal="pressed" from="ColorMenu/VBoxContainer/CheckButton2" to="ColorMenu" method="_on_check_button_2_pressed"]
[connection signal="pressed" from="ColorMenu/VBoxContainer/CheckButton3" to="ColorMenu" method="_on_check_button_3_pressed"]
